tests/repr/invalid-repr-width-1.stderr
error[E0277]: the trait bound `[(); 32]: IsU16Compatible` is not satisfied
 --> tests/repr/invalid-repr-width-1.rs:3:1
  |
3 | #[bitfield]
  | ^^^^^^^^^^^ the trait `IsU16Compatible` is not implemented for `[(); 32]`
  |
  = help: the trait `IsU16Compatible` is implemented for `[(); 16]`
  = help: see issue #48214
  = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
